#
# Copyright 2023, Colias Group, LLC
#
# SPDX-License-Identifier: BSD-2-Clause
#

[package]
name = "example"
version = "0.1.0"
authors = ["Nick Spinale <nick.spinale@coliasgroup.com>"]
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
sel4 = { path = "../../rust-sel4/crates/sel4" }
sel4-root-task = { path = "../../rust-sel4/crates/sel4-root-task" }
sel4-logging = { path = "../../rust-sel4/crates/sel4-logging" }
buddy_system_allocator = "0.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = { version = "0.9", features = ["use_ticket_mutex"] }
uintr = { path = "./uintr" }
async_runtime = { path = "./async_runtime" }
