[package]
name = "async_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sel4 = { path = "../../../rust-sel4/crates/sel4" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = { version = "0.9", features = ["use_ticket_mutex"] }