[package]
name = "uintr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sel4 = { path = "../../../rust-sel4/crates/sel4" }
riscv = { git = "https://github.com/duskmoon314/riscv.git", branch = "extN", features = [
    "inline-asm",
] }